# JaroWinkler

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: branchbuild.yml  releasebuild.yml
_custom_build/: backend.py
bench/: benchmark_jaro_winkler.py  benchmark_visualize.py
bench/results/: jaro_winkler.csv
jarowinkler/: CMakeLists.txt  __init__.py  __init__.pyi  _initialize.pyx  common.hpp  common.pxd
src/cython/: CMakeLists.txt  Jaro.pyx  JaroWinkler.pyx  common.hpp  common.pxd  scorer.hpp
src/jarowinkler/: CMakeLists.txt  __init__.py  __init__.pyi  _initialize_py.py  generate.sh  scorer.hpp
tests/: test_JaroWinkler.py  test_hypothesis.py
tools/: sdist.patch
