[metadata]
name = jarowinkler
version = 2.0.0
description = library for fast approximate string matching using Jaro and Jaro-Winkler similarity
long_description = file: README.md
long_description_content_type = text/markdown
author = Max Bachmann
author_email = pypi@maxbachmann.de
url = https://github.com/maxbachmann/JaroWinkler
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
keywords = string, comparison, edit-distance

[options]
packages = jarowinkler
python_requires = >=3.8
install_requires =
    rapidfuzz <= 3.5.1, < 4.0.0

[options.package_data]
* = *.pyi, py.typed